enable add note feature

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import ActionBar from '@/components/ActionBar.astro'
+import ActionBar from '@/sections/ActionBar.astro'
 // import SideBar from '@/components/SideBar.astro'
 import BottomBar from '@/components/BottomBar.astro'
 import { ViewTransitions } from 'astro:transitions'
