--- a/src/pages/notes/new.astro
+++ b/src/pages/notes/new.astro
@@ -32,6 +32,8 @@ import FormInput from '@/components/FormInput.astro'
 			const formData = new FormData(form)
 			const data = Object.fromEntries(formData)
 
+			console.log(`DEBUG:sending data:`, data)
+
 			const response = await window.fetch('/api/notes', {
 				method: 'POST',
 				body: JSON.stringify(data),
