--- a/src/pages/notes/new.astro
+++ b/src/pages/notes/new.astro
@@ -31,22 +31,22 @@ import FormInput from '@/components/FormInput.astro'
 		const saveNote = async () => {
 			const formData = new FormData(form)
 			const data = Object.fromEntries(formData)
-
+			const values = Object.values(data)
 			console.log(`DEBUG:sending data:`, data)
 
-			const response = await window.fetch('/api/notes', {
-				method: 'POST',
-				body: JSON.stringify(data),
-				headers: {
-					'Content-Type': `application/json`,
-				},
-			})
-			if (response.ok) {
-				console.log(`response ok`)
-				window.location.href = `/`
-			} else {
-				console.error(`Error:`, response)
-			}
+			// const response = await window.fetch('/api/notes', {
+			// 	method: 'POST',
+			// 	body: JSON.stringify(data),
+			// 	headers: {
+			// 		'Content-Type': `application/json`,
+			// 	},
+			// })
+			// if (response.ok) {
+			// 	console.log(`response ok`)
+			// 	window.location.href = `/`
+			// } else {
+			// 	console.error(`Error:`, response)
+			// }
 		}
 
 		back?.addEventListener(`click`, async () => {
