--- a/src/pages/notes/[id].astro
+++ b/src/pages/notes/[id].astro
@@ -23,7 +23,7 @@ const edit = toLocal(new Date(), { timeStyle: 'short' })
 
 <Layout
 	title={'note.title'}
-	back
+	backAction=""
 >
 	<main class="w-full max-w-5xl mt-2 text-primary text-lg">
 		<form class="flex flex-col w-full bg-background rounded-lg p-6">
@@ -75,17 +75,19 @@ const edit = toLocal(new Date(), { timeStyle: 'short' })
 
 		const saveNote = async () => {
 			const formData = new FormData(form)
-			const data = Object.entries(formData)
+			const data = Object.fromEntries(formData)
+			const id = document.location?.pathname.split(`/`).pop()
 
-			console.log(`DEBUG:updaating data:`, data)
-			
-			// const response = await window.fetch('/api/notes', {
-			// 	method: 'PUT',
-			// 	body: JSON.stringify(data),
-			// 	headers: {
-			// 		'Content-Type': `application/json`,
-			// 	},
-			// })
+			if (id) data.id = id
+
+			const response = await window.fetch('/api/notes', {
+				method: 'POST',
+				body: JSON.stringify(data),
+				headers: {
+					'Content-Type': `application/json`,
+				},
+			})
+			console.log(`DEBUG:response in [id]:`, response)
 			// if (response.ok) {
 			// 	console.log(`response ok`)
 			// 	window.location.href = `/`
