add speed insights

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import ActionBar from '@/sections/ActionBar/index.astro'
-// import SideBar from '@/components/SideBar.astro'
+import SpeedInsights from '@vercel/speed-insights/astro'
 import BottomBar from '@/components/BottomBar.astro'
 import { ViewTransitions } from 'astro:transitions'
 
@@ -65,5 +65,6 @@ const {
 			<slot />
 			{bottomBar && <BottomBar />}
 		</div>
+		<SpeedInsights />
 	</body>
 </html>
