--- a/src/pages/notes/new.astro
+++ b/src/pages/notes/new.astro
@@ -31,27 +31,26 @@ import FormInput from '@/components/FormInput.astro'
 		const saveNote = async () => {
 			const formData = new FormData(form)
 			const data = Object.fromEntries(formData)
-			
-			console.log(`DEBUG:sending data:`, data)
 
-			const response = await window.fetch('/api/notes', {
-				method: 'POST',
-				body: JSON.stringify(data),
-				headers: {
-					'Content-Type': `application/json`,
-				},
-			})
-			if (response.ok) {
-				console.log(`response ok`)
-				window.location.href = `/`
-			} else {
-				console.error(`Error:`, response)
+			if (data) {
+				const response = await window.fetch('/api/notes', {
+					method: 'POST',
+					body: JSON.stringify(data),
+					headers: {
+						'Content-Type': `application/json`,
+					},
+				})
+				if (response.ok) {
+					console.log(`response ok`)
+					window.location.href = `/`
+				} else {
+					console.error(`Error:`, response)
+				}
 			}
 		}
 
 		back?.addEventListener(`click`, async () => {
 			await saveNote()
-			window.history.back()
 		})
 
 		form?.addEventListener(`submit`, async (e) => {
