--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro'
-// import { getSession } from 'auth-astro/server'
+import { getSession } from 'auth-astro/server'
 
-// const session = await getSession(Astro.request)
-// const user = session?.user
+const session = await getSession(Astro.request)
+const user = session?.user
 ---
 
 <Layout title="Welcome to Astro.">
@@ -265,7 +265,7 @@ import Layout from '../layouts/Layout.astro'
 								d="M1 8h11m0 0L8 4m4 4-4 4m4-11h3a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-3"
 							></path>
 						</svg>
-						<span class="flex-1 ms-3 whitespace-nowrap">Sign In</span>
+						<span class="flex-1 ms-3 whitespace-nowrap" id="signIn">Sign In</span>
 					</a>
 				</li>
 				<li>
@@ -584,16 +584,9 @@ import Layout from '../layouts/Layout.astro'
 	</div>
 </Layout>
 
-
-
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-</style>
+<script>
+	const $signIn = document.getElementById('signIn')
+	$signIn?.addEventListener('click', () => {
+		alert('Sign In')
+	})
+</script>
